# pike-graphql

./: Makefile  README.md
dev/: generator.pike  generator.sh
parser-graphql/: .gitignore  Makefile.in  configure.in  graphqlparser.cmod
parser-graphql/module.pmod.in/: module.pmod
